# idd-solafune

./: .gitignore  Models.py  README.md  configs.py  data_augmentation.py  dataset_prep.ipynb  datasets.py  ensemble.py  eval.py  generate_masks.py  graphs.ipynb  pyproject.toml  train.ipynb  train.py  tuning.py  utils.py  visualization.ipynb
report/: README.md  nldl.cls  references.bib  render.sh  report.md
segformer/: README.md
trans_unet/: README.md  model.py  slides.md  transunet.md
vision_transformer/: README.md  model.py
