[project]
name = "idd-solafune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.1",
    "bokeh>=3.6.2",
    "dask[distributed]>=2024.2.1",
    "imagecodecs>=2024.12.30",
    "jupyterlab>=4.3.4",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "ray[tune]>=2.42.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "segmentation-models-pytorch>=0.4.0",
    "solafune-tools>=0.5.3",
    "tensorboard>=2.18.0",
    "tifffile>=2025.1.10",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]
cu124 = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]
vim = [
    "jupyterlab-vim>=4.1.4",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
